@@ -38,7 +38,7 @@ namespace kudu {
 // are plausible.
 class TraceMetrics {
  public:
-  TraceMetrics() : tcmalloc_contention_cycles_(0) {}
+  TraceMetrics() {}
   ~TraceMetrics() {}
 
   // Internalize the given string by duplicating it into a process-wide
@@ -59,14 +59,6 @@ class TraceMetrics {
   // Return a copy of the current counter map.
   std::map<const char*, int64_t> Get() const;
 
-  // Increment the number of cycles spent in tcmalloc lock contention.
-  //
-  // tcmalloc contention is stored separately from other metrics since
-  // it is incremented from a code path that prohibits allocation.
-  void IncrementTcmallocContentionCycles(int64_t cycles) {
-    tcmalloc_contention_cycles_.IncrementBy(cycles);
-  }
-
   // Return metric's current value.
   //
   // NOTE: the 'name' MUST be the same const char* which is used for
@@ -76,7 +68,6 @@ class TraceMetrics {
  private:
   mutable simple_spinlock lock_;
   std::map<const char*, int64_t> counters_;
-  AtomicInt<int64_t> tcmalloc_contention_cycles_;
 
   DISALLOW_COPY_AND_ASSIGN(TraceMetrics);
 };
@@ -88,14 +79,7 @@ inline void TraceMetrics::Increment(const char* name, int64_t amount) {
 
 inline std::map<const char*, int64_t> TraceMetrics::Get() const {
   std::unique_lock<simple_spinlock> l(lock_);
-  auto m = counters_;
-  l.unlock();
-
-  auto v = tcmalloc_contention_cycles_.Load();
-  if (v > 0) {
-    m["tcmalloc_contention_cycles"] = v;
-  }
-  return m;
+  return counters_;
 }
 
 inline int64_t TraceMetrics::GetMetric(const char* name) const {
